c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_types/non_constant_static_initializer.c
int a = 10;
/* b has static storage duration,
 * so its initializer must be constant.
 */
int b = 1 + a;

int main(void) {
    return b;
}